# among-foss

./: .gitignore  Makefile  README.md  main.c  meson.build
docs/: JSON.md
include/: chat.h  client.h  constant.h  game.h  json.h  location.h  packet.h  server.h  task.h  util.h
maps/: TODO.md  mira.txt  polus.h  skeld.h
src/: chat.c  client.c  game.c  json.c  location.c  main.c  meson.build  packet.c  server.c  task.c  util.c
